@@ -35,6 +35,8 @@ ROW(NULL_STATE,
 
 		sm->n_methods = 0;
 
+                if (unpack_connect_pdu(sm, e->user_data) == -1)
+		         error(0, "Unpacking Connect PDU failed, oops.");
 		/*
 		 * Send S-Connect.res to ourselves. NOTE: The spec says
 		 * S-Connect.ind to the layer above WSP, but since we
