@@ -16,10 +16,10 @@ global-prefix = "00358,358,0"
 #port = 10000
 #route-prefix = "0035850;default"
 
-#smsc = fake
-#host = localhost
-#port = 10001
-#route-prefix = "0035840"
+smsc = fake
+host = localhost
+port = 10001
+route-prefix = "0035840;default"
 
 csdr = wap
 interface-name = 193.229.171.102
